dataset1235/2025-2/805158916/users/1651421245/executions/2118643220_3348296077.log
== RUN (2025-09-01 14:39:20)
-- CODE: 
t = int(input("o tempo de estacionamento em horas: "))
q = t*15 
acre = q+5
total= (acre*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
o tempo de estacionamento em horas: 4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
o tempo de estacionamento em horas: 22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
o tempo de estacionamento em horas: 28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
o tempo de estacionamento em horas: 10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
o tempo de estacionamento em horas: 16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
o tempo de estacionamento em horas: 76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:58:53)
-- CODE: 
t = float(input("o tempo de estacionamento em horas: "))
q = t*15
acre = q+5
total = acre +(acre*(20/100))
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
o tempo de estacionamento em horas: 24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
o tempo de estacionamento em horas: 132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
o tempo de estacionamento em horas: 168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
o tempo de estacionamento em horas: 60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
o tempo de estacionamento em horas: 96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
o tempo de estacionamento em horas: 456.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:20)
-- CODE: 
t = int(input("o tempo de estacionamento em horas: "))
q = t*15 
acre = q+5
total= (acre*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
o tempo de estacionamento em horas: 4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
o tempo de estacionamento em horas: 22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
o tempo de estacionamento em horas: 28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
o tempo de estacionamento em horas: 10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
o tempo de estacionamento em horas: 16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
o tempo de estacionamento em horas: 76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:44)
-- CODE: 
t = int(input("o tempo de estacionamento em horas: "))
q = t*15 
acre = q+5
total= (acre)*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:46)
-- CODE: 
t = int(input("o tempo de estacionamento em horas: "))
q = t*15 
acre = q+5
total= (acre)*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 4
    total= (acre)*(20/100))
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:23)
-- CODE: 
t = int(input("o tempo de estacionamento em horas: "))
q = t*15 
acre = q+5
total= (acre*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
o tempo de estacionamento em horas: 4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
o tempo de estacionamento em horas: 22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
o tempo de estacionamento em horas: 28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
o tempo de estacionamento em horas: 10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
o tempo de estacionamento em horas: 16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
o tempo de estacionamento em horas: 76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:39:19)
-- CODE: 
t = int(input("o tempo de estacionamento em horas: "))
q = t*15 
acre = q+5
total= (acre*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
o tempo de estacionamento em horas: 4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
o tempo de estacionamento em horas: 22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
o tempo de estacionamento em horas: 28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
o tempo de estacionamento em horas: 10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
o tempo de estacionamento em horas: 16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
o tempo de estacionamento em horas: 76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:48:55)
-- CODE: 
t = float(input("o tempo de estacionamento em horas: "))
q = t*15
acre = q+5
total= (acre*(20/100))
print(round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
o tempo de estacionamento em horas: 4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
o tempo de estacionamento em horas: 22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
o tempo de estacionamento em horas: 28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
o tempo de estacionamento em horas: 10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
o tempo de estacionamento em horas: 16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
o tempo de estacionamento em horas: 76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
